bugfix: lightbox subtitle text overflow

--- a/dev.css
+++ b/dev.css
@@ -104,6 +104,9 @@
 
 .lightbox__subtitle {
   position: absolute;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
   left: 0;
   bottom: -20px;
   margin: 0;
